--- a/style.css
+++ b/style.css
@@ -10,9 +10,9 @@ body {
   margin-top: 20px;
 }
 
-body p {
+/* body p {
   margin: 0;
-}
+} */
 
 body select {
   width: 50px;
@@ -40,6 +40,7 @@ button {
 button:hover {
   color: white;
   transition: all ease 0.3s;
+  cursor: pointer;
 }
 
 .start-btn {
